request for contours in progress...

--- a/discussion_of_results.tex
+++ b/discussion_of_results.tex
@@ -106,20 +106,20 @@ Table ~\ref{tab:pga_values} presents the PGA value for some of the major cities 
 In this study we use one attenuation relationship (See the discussion in the attenuation relationship section). In order to consider the uncertainty of the ground motion equation we also present the $\pm$ standard deviation of each seismic hazard model. These figures give an idea about the range of probable peak ground acceleration for 10\% and 2\% probability of exceedance in 50 years. Fig.~\ref{fig:pga_10_minus_plus} and Fig.~\ref{fig:pga_2_minus_plus} show the results of plus and minus standard deviation of attenuation relationship, respectively. These figures show the variation of peak ground acceleration for each model. However, due to inability of the earth to carry more intense seismic waves, there is almost certainly some true physical upper bound on ground motion intensity \citep{Baker2008}
 
 
-\begin{figure*} [!ht]
-\centering
-\includegraphics[scale=0.15]{figures/pdf/pga_10_minus_plus.pdf} 
-\caption{$\pm$ standard deviation of peak ground acceleration for 10\% probability of exceedance in 50 years.}
-\label{fig:pga_10_minus_plus}
-\end{figure*}
+% \begin{figure*} [!ht]
+% \centering
+% \includegraphics[scale=0.15]{figures/pdf/pga_10_minus_plus.pdf} 
+% \caption{$\pm$ standard deviation of peak ground acceleration for 10\% probability of exceedance in 50 years.}
+% \label{fig:pga_10_minus_plus}
+% \end{figure*}
 
 
-\begin{figure*} [!ht]
-\centering
-\includegraphics[scale=0.15]{figures/pdf/pga_2_minus_plus.pdf} 
-\caption{$\pm$ standard deviation of peak ground acceleration for 2\% probability of exceedance in 50 years.}
-\label{fig:pga_2_minus_plus}
-\end{figure*}
+% \begin{figure*} [!ht]
+% \centering
+% \includegraphics[scale=0.15]{figures/pdf/pga_2_minus_plus.pdf} 
+% \caption{$\pm$ standard deviation of peak ground acceleration for 2\% probability of exceedance in 50 years.}
+% \label{fig:pga_2_minus_plus}
+% \end{figure*}
 
 
 
