improved figures for results

--- a/results.tex
+++ b/results.tex
@@ -6,16 +6,23 @@ The PGA hazard maps have been computed for a 10\% and 2\% exceedance probability
 \begin{figure*}[t]
     \centering
     \includegraphics[width=\textwidth]{figures/pdf/figure-08.pdf} 
-    \caption{Pending.}
+    \caption{PGA exceedance.}
     \label{fig:pga}
 \end{figure*}
 
-\begin{figure}%[t]
+\begin{figure*}[t]
     \centering
-    \includegraphics[width=\columnwidth]{figures/pdf/figure-09.pdf} 
-    \caption{Pending.}
-    \label{fig:std}
-\end{figure}
+    \includegraphics[width=\textwidth]{figures/pdf/figure-09.pdf} 
+    \caption{Uniform minus zones.}
+    \label{fig:pga}
+\end{figure*}
+
+\begin{figure*}[t]
+    \centering
+    \includegraphics[width=\textwidth]{figures/pdf/figure-10.pdf} 
+    \caption{plus minus std for M6.5.}
+    \label{fig:pga}
+\end{figure*}
 
 Regarding the study domain and the 0.1 grid size, the total number of source as grid points is 13561. 
 
